# ChangeLog for mail-client/mozilla-thunderbird
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mozilla-thunderbird/Attic/ChangeLog,v 1.268 2008/08/29 08:53:53 armin76 Exp $

  29 Aug 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-2.0.0.16.ebuild:
  Add new patchset for bug #224561

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  04 Aug 2008; Tobias Heinlein <keytoaster@gentoo.org>
  mozilla-thunderbird-2.0.0.16.ebuild:
  amd64 stable wrt security bug #231975

  03 Aug 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  mozilla-thunderbird-2.0.0.16.ebuild:
  ppc stable, bug #231975

  26 Jul 2008; Markus Rothe <corsair@gentoo.org>
  mozilla-thunderbird-2.0.0.16.ebuild:
  Stable on ppc64; bug #231975

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-2.0.0.16.ebuild:
  alpha/ia64/sparc/x86 stable wrt security #231975

*mozilla-thunderbird-2.0.0.16 (24 Jul 2008)

  24 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-2.0.0.16.ebuild:
  Version bump

  03 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-2.0.0.14.ebuild:
  Fix bug #223375

  05 May 2008; Brent Baude <ranger@gentoo.org>
  mozilla-thunderbird-2.0.0.14.ebuild:
  Marking mozilla-thunderbird-2.0.0.14 ppc for bug 214816

  05 May 2008; Markus Rothe <corsair@gentoo.org>
  mozilla-thunderbird-2.0.0.14.ebuild:
  Stable on ppc64; bug #214816

  04 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-thunderbird-2.0.0.14.ebuild:
  alpha/ia64/sparc stable wrt #214816

  04 May 2008; Markus Meier <maekke@gentoo.org>
  mozilla-thunderbird-2.0.0.14.ebuild:
  amd64/x86 stable, security bug #214816

*mozilla-thunderbird-2.0.0.14 (02 May 2008)

  02 May 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-thunderbird-2.0.0.14.ebuild:
  Version bump

  19 Apr 2008; Raúl Porcel <armin76@gentoo.org>